--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,4 +54,12 @@ path = "src/day6a.rs"
 name = "day6b"
 path = "src/day6b.rs"
 
+[[bin]]
+name = "day7a"
+path = "src/day7a.rs"
+
+[[bin]]
+name = "day7b"
+path = "src/day7b.rs"
+
 [dependencies]
