--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,4 +62,12 @@ path = "src/day7a.rs"
 name = "day7b"
 path = "src/day7b.rs"
 
+[[bin]]
+name = "day8a"
+path = "src/day8a.rs"
+
+[[bin]]
+name = "day8b"
+path = "src/day8b.rs"
+
 [dependencies]
