--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ name = "day8b"
 path = "src/day8b.rs"
 
 [[bin]]
-name = "day9a"
-path = "src/day9a.rs"
+name = "day9"
+path = "src/day9.rs"
 
 [dependencies]
