--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,4 +86,13 @@ path = "src/day10b.rs"
 name = "day11"
 path = "src/day11.rs"
 
+[[bin]]
+name = "day12a"
+path = "src/day12a.rs"
+
+[[bin]]
+name = "day12b"
+path = "src/day12b.rs"
+
 [dependencies]
+num = "0.2.0" 
