--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,10 @@ path = "src/day14.rs"
 name = "day16"
 path = "src/day16.rs"
 
+[[bin]]
+name = "day17"
+path = "src/day17.rs"
+
 [dependencies]
 num = "0.2.0" 
 num-traits = "0.2"
